k8s/04-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: filehub-db
  namespace: filehub
spec:
  selector:
    app: filehub-db
  ports:
    - port: 5432
      targetPort: 5432
