k8s/06-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: filehub
spec:
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
