k8s/08-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: filehub
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
